[tool.poetry]
name = "youtube-studio-editor"
version = "0.1.0"
description = "Use youtube data api to edit video"
authors = ["Harvey Nguyen"]

[tool.poetry.dependencies]
python = "^3.9"
fastai = "^2.7.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
